# pySDR

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.hpp
docs/: api.html  genindex.html  index.html  py-modindex.html  searchindex.js
docs/_sources/: api.rst.txt
include/: nanoflann.h
include/tapkee/routines/: eigendecomposition.hpp
lib/DR/: CMakeLists.txt  DR.cpp  DR.hpp  DR_interface.cpp
lib/LGC/: CMakeLists.txt  LGC.cpp  LGC.hpp
python/: setup.py
python/docs/: objects.inv  search.html
python/docs/_sources/: index.rst.txt
python/pySDR/: DR.py  DRwrapper.py  LGC.py  SDR.py  __init__.py
python/sphinx/source/: conf.py  test.py
